--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.555.0",
     "next": "^16.0.4",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.2",
     "react-dom": "^19.2.0",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
