--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "verify:invoices": "node scripts/verify-invoices.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
